src/components/ChatApp/ChatApp.css
/* ... */
.thread-list-item.active,
.thread-list:hover .thread-list-item.active,
.thread-list:hover .thread-list-item.active:hover {
  background-color: #e1f5fe;
  cursor: default;
}

.message-author-name,
.thread-name {
  margin: 0;
  font-size: 14px;
  padding: 0;
}

.container-date{
  background: #999999;
  color: #fff;
  position: relative;
  min-width: 80px;
  max-width: 80%;
  font-size: 17px;
  line-height: 22px;
  padding: 8px;
  padding-bottom: 4px;
  margin: 4px;
  border-radius: 8px;
  margin: 0 auto;
  text-align: center;
}

.dark .container-date{
  background: rgba(25, 147, 147, 0.2);
  color: #0AD5C1;
  position: relative;
  min-width: 80px;
  max-width: 80%;
  font-size: 17px;
  line-height: 22px;
  padding: 8px;
  padding-bottom: 4px;
  margin: 4px;
  border-radius: 8px;
  margin: 0 auto;
  text-align: center;
}

.message-container.SUSI{
  margin-right: auto;
  margin-left: 12px;
  background: #d3e2f4;
}

.dark .message-container.SUSI{
  border-color:rgba(25, 147, 147, 0.2);
  background:rgba(25, 147, 147, 0.2);
  color: #0EC879;
}

.message-container.You{
  background: #fff;
}

.dark .message-container.You{
  background: rgba(25, 147, 147, 0.2);
  color: #0AD5C1;
}

.message-container.SUSI>h5,.message-container.SUSI>.message-text {
  padding-right: 16px;
}

.message-container.SUSI::after {
  transform: rotate(-315deg);
  left: 0;
  top: 16px;
  border-color: transparent transparent #d3e2f4 #d3e2f4;
  background: #d3e2f4;
}

.dark .message-container.SUSI::after{
  border-color:#194b5e #194b5e rgb(25, 75, 94) rgb(25, 75, 94);
  background:rgba(25, 147, 147, 0.2);
}

.message-time, .thread-time {
  list-style-type: none;
  font-size: 12px;
  color: #90a4ae;
  margin: 0;
  padding: 0;
  text-align: right;
}

.dark .message-time, .thread-time{
  color: #7eaaaf;
}

.message-text, .thread-last-message {
  font-size: 14px;
  margin: 0;
  padding: 0;
}

.message-pane{
  margin: 0 auto;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.compose {
  position: fixed;
  bottom: 0;
  margin: 0;
  border: none;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  background: var(--compose);
  box-shadow: 0 -1px 4px 0 rgba(0,0,0,.12);
  z-index: 2;
  transform: translateY(0);
  transition: transform .25s cubic-bezier(0,0,.3,1) .3s;
  pointer-events: auto;
  opacity: 1;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  height: 75px;
}

.dark .compose{
  background: rgba(30, 87, 153, 0.02);
  color: #0AD5C1;
}

.message-composer {
  width: 100%;
  margin: 0 8px 0 0;
  padding: 8px 9px 8px 9px;
  font-size: 14px;
  border: none;
  background: 0 0;
  text-align: left;
  color: inherit;
  -webkit-appearance: none;
  border-radius: 0;
  display: block;
  text-align: left;
  color: inherit;
  outline: 0;
}

.dark .message-composer{
  width: 100%;
  margin: 0 auto;
  border-top: 1px solid rgba(240, 240, 240, 0.56);
}

.dark .message-composer textarea{
  color: #0AD5C1;
  background: rgba(0, 0, 0, 0.01);
}

textarea {
  border: none;
  font-family: 'Lato', sans-serif;
  overflow: auto;
  outline: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  width: 92%;
  resize: none;
  border-radius: 6px;
  padding-left: 10px;
  padding-top: 10px;
  font-size: 14px;
  height: 72%;
  background: #fff;
  margin-top: 3px;
}

@media only screen and (min-width: 0px) and (max-width: 768px){
  textarea{
    width: 87%;
  }
}

.leaflet-container {
  height: 150px;
  width: 250px;
  margin: 0 auto;
}

.chatapp {
  margin: 0 auto;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  background: #eceff1;
  padding: 0;
  margin: 0 auto;
  margin-top: 56px;
  box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
}

.map-marker-icon {
  background: url('../images/map_marker_icon.png');
  background-size: contain;
  background-repeat: no-repeat;
  width: 25px;
  height: 25px;
}

.message-container{
  position: relative;
  min-width: 80px;
  max-width: 80%;
  font-size: 17px;
  line-height: 22px;
  padding: 8px;
  padding-bottom: 3px;
  margin: 4px;
  border-radius: 8px;
  margin-left: auto;
  margin-right: 12px;
}

.tile{
  width: 100%;
  height: 100px;
  padding-left: 7%;
  padding-right: 2%;
}

.slick-slide{
  margin: 0 10px;
}

.slick-list{
  max-height: 100px;
}

.tile-img{
  max-width: 100%;
  max-height: 100%;
  float: left;
  text-align: center;
  position: relative;
  margin: 0 auto;
  position: absolute;
  left: 0;
  right: 0;
}

.tile-text{
  position: relative;
  padding: 2% 2% 0 2%;
  margin: 0 auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.tile-title{
  color: #999999;
  font-size: 120%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.tile-img-container{
  background-color: #f2f2f2;
  text-align: center;
  position: relative;
  width: 30%;
  height: 100%;
  padding: 0;
  margin: 0;
  float: left;
  display:flex;
  align-items:center;
  justify-content:center;
}

.tile-anchor{
  text-decoration: none;
}

a {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}

.dark a{
  color: #80a9a5;
}

.theme-button{
  line-height: 52px;
  background: #19324c;
  height: 56px;
  padding: 0 10px;
  color: #fff;
  font-size: 13px;
  cursor: pointer;
}

.dark .theme-button{
  line-height: 52px;
  background: #607d8b;
  height: 56px;
  padding: 0 10px;
  color:#fff;
}

.dialogStyle div{
    margin: 0 auto;
}

em{
  background-color: orange;
}

.settingsComponents{
  width: 90%;
  text-align: center;
  margin: 0 auto;
}

.settingsForm{
  margin: 0 auto;
}

.settingsDialog {
  text-align: left;
  padding-left: 25%;
}

.settingsBtns {
  margin-bottom: 16px;
}
/* ... */

